9.428: fix assignee toggler visibility

--- a/css/styl/2.0.styl
+++ b/css/styl/2.0.styl
@@ -460,13 +460,14 @@ pre
   &:hover
     top auto
 
+.t-assignee img,
+.t-toggle-all-assignee .userpic
+  border 3px solid var(--background-color-blank)
+  box-sizing content-box
+
 .t-assignee
   cursor pointer
   opacity 0.5
-
-  img
-    border 3px solid transparent
-    box-sizing content-box
 
   div.smaller
     position relative
